src/objects/EC_CategoryTreeCache__c.object
<CustomObject>
    <fields>
        <fullName>EC_AccountGroup__c</fullName>
        <label>Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipLabel>CategoryTreeCache</relationshipLabel>
        <relationshipName>EC_CategoryTreeCache</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EC_CacheData__c</fullName>
        <label>CacheData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EC_Currency__c</fullName>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Locale__c</fullName>
        <label>Locale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EC_Storefront__c</fullName>
        <label>Storefront</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CategoryTreeCache</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EC_AccountGroup__c</columns>
        <columns>EC_Locale__c</columns>
        <columns>EC_Currency__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CategoryTreeCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CategoryTreeCache</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>